@@ -1,3 +1,11 @@
+2004-07-02  Yann Hodique  <Yann.Hodique@lifl.fr>
+
+	* perso/patches.el:
+	activate every disabled command
+
+	* perso/margin.el
+	initial checkin
+
 2004-06-30  Yann Hodique  <Yann.Hodique@lifl.fr>
 
 	* dotgnus.el
